--- a/style.css
+++ b/style.css
@@ -1,19 +1,217 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
-    color: #fff;
+    color: #ffffff;
     background-color: #161616
 }
-*{
+
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-p{
+
+p {
     font-size: 0.9;
     max-width: 35em;
     line-height: 27px;
 }
-h1, h2{
+
+h1,
+h2 {
     font-weight: 300;
+}
+
+h1 {
+    margin: 0.5em 0;
+    font-size: 3em;
+}
+
+.specs h2,
+.about h2 {
+    font-size: 2em;
+    padding-left: 1.2em;
+    border-left: 0.1em #FF6600 solid;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+section {
+    padding: 2.5em;
+}
+
+nav,
+.infos,
+.info,
+.specs-header,
+.specs li,
+.stats {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.specs,
+.icon,
+.panel:first-child,
+.panel:last-child {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header {
+    height: 100vh;
+    min-height: 30em;
+    background:
+        url(assets/imgs/bugatti3.jpg) no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+}
+
+nav {
+    padding: 1.5em 2.5em;
+    position: relative;
+}
+
+.menu-btn {
+    display: none;
+}
+
+.brand {
+    font-size: 1.3em;
+}
+
+nav li {
+    display: inline-block;
+    margin: 0 0.8em;
+    text-align: center;
+}
+
+nav a {
+    color: #ffffff;
+}
+
+nav a :hover {
+    color: #eee;
+}
+
+.header-body {
+    padding: 2.5em;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+}
+
+.header-body p {
+    max-width: 25em;
+}
+
+.heading p {
+    margin-left: 3em;
+    display: inline-block;
+}
+
+.infos {
+    gap: 2em;
+}
+
+.infos,
+.heading {
+    padding: 5em 1em;
+}
+
+.info img {
+    max-width: 6em;
+    margin-right: 1em;
+}
+
+.info h3 {
+    margin-bottom: 0, 5;
+}
+
+.info p {
+    max-width: 15em;
+}
+
+.specs {
+    background:
+        url(assets/imgs/bugatti5.jpeg) no-repeat center;
+    min-height: 40em;
+    position: relative;
+    padding: relative;
+    padding-top: 8em;
+}
+
+.specs-header,
+specs ul {
+    position: relative;
+    z-index: 1;
+}
+
+.specs ul {
+    width: 40em;
+    margin-top: 3em;
+}
+
+.specs li {
+    padding: 0.6em 0;
+    border-bottom: #555 1px solid;
+}
+
+.specs li span:first-child {
+    color: #888;
+}
+
+.panels {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    min-height: 40em;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding-top: 8em;
+}
+
+.panel>div {
+    padding: 1em;
+}
+
+.panels-sm {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.panel:first-child,
+.panel:last-child {
+    padding: 1em;
+}
+
+.panel:first-child {
+    background: #FF6600;
+}
+
+.panel:last-child {
+    background: #ffffff;
+    color: #000000;
+}
+
+.panel:nth-child(2) {
+    background:
+        url(assets/imgs/bugatti6.jpg) no-repeat center;
+}
+
+.panel:nth-child(3) {
+    background:
+    url(assets/imgs/bugatti7.jpg) no-repeat center;
 }
