--- a/style.css
+++ b/style.css
@@ -208,10 +208,29 @@ specs ul {
 
 .panel:nth-child(2) {
     background:
-        url(assets/imgs/bugatti6.jpg) no-repeat center;
+        url(assets/imgs/bugatti4.jpg) no-repeat center;
 }
 
 .panel:nth-child(3) {
     background:
-    url(assets/imgs/bugatti7.jpg) no-repeat center;
+    url(assets/imgs/bugatti5.jpeg) no-repeat center;
 }
+.panel:nth-child(2),
+.panel:nth-child(3){
+    background-size: cover;
+    position: relative;
+}
+.specs::before,
+.panel:nth-child(2):before,
+.panel:nth-child(3):before{
+    content: '';
+    background: rgba(0, 0, 0, 0.8);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+}
+
+
